--- a/faq.html
+++ b/faq.html
@@ -68,7 +68,7 @@
               <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                 <div class="card-body">
                   <p>
-                    <em>vested</em> is a mobile app designed to help you set goals and save money for the things you care about. We learn about your finances, recommend a goal that is within your reach, and help you reach it one month at a time.
+                    <em>vested</em> is a mobile app designed to help you set goals and save money for the things you care about. Simply put, vested gathers your finances, recommends a goal that is within your reach, and helps you reach it one month at a time.
                   </p>
                 </div>
               </div>
@@ -77,15 +77,15 @@
             <div class="card">
               <div class="card-header" id="headingTwo">
                 <h2 class="mb-0">
-                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="text-decoration: none;">
-                    Is vested right for you?
+                  <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseOne" style="text-decoration: none;">
+                    Why isn’t vested free?
                   </button>
                 </h2>
               </div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                 <div class="card-body">
                   <p>
-                    If you are in debt and want to get out of debt, <em>vested</em> is right for you. If you are debt–free and want to save up for something important, you are in the right place.
+                    Our aim is to build a well-designed product and refine it over time. We believe subscription pricing is the best way to do that. We don’t sell data. We don’t sell ads or credit cards. We simply sell an excellent savings app. With a free trial and a cost of no more than a cup of coffee per month, we hope you will grow to love <em>vested</em> and appreciate the value it adds to your life.
                   </p>
                 </div>
               </div>
@@ -95,28 +95,28 @@
               <div class="card-header" id="headingThree">
                 <h2 class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="text-decoration: none;">
-                    Is vested a bank?
+                    Is vested right for you?
                   </button>
                 </h2>
               </div>
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                 <div class="card-body">
                   <p>
-                    We are not a bank. Think of the app as a financial advisor, recommending savings goal options and helping you stay on track towards your goal.
+                    If you are in debt and want to get out of debt, <em>vested</em> is right for you. If you are debt–free and want to save up for something important, you are in the right place.
                   </p>
                 </div>
               </div>
             </div>
 
             <div class="card">
-              <div class="card-header" id="headingFour">
+              <div class="card-header" id="headingFive">
                 <h2 class="mb-0">
-                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour" style="text-decoration: none;">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive" style="text-decoration: none;">
                     Where do your savings go?
                   </button>
                 </h2>
               </div>
-              <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+              <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
                 <div class="card-body">
                   <p>
                     Since we are not a bank, we do not touch your savings. You are free to move the money you save into a dedicated account, pay off debt, or spend it on your goal. If you are investing your savings, we would recommend long-term savings options (e.g. 401K or Roth IRA) or shorter term savings options (e.g. high-interest online bank account).
@@ -126,17 +126,17 @@
             </div>
 
             <div class="card">
-              <div class="card-header" id="headingFive">
+              <div class="card-header" id="headingFour">
                 <h2 class="mb-0">
-                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive" style="white-space: normal; text-align: left; text-decoration: none;">
-                    How do we keep your data secure?
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour" style="text-decoration: none;">
+                    Is vested a bank?
                   </button>
                 </h2>
               </div>
-              <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+              <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
                 <div class="card-body">
                   <p>
-                    To protect your financial security and privacy, <em>vested</em> uses the same level of security as your bank. We never have access to money in your account or confidential information such as full credit card, account or routing numbers, and we will not share or sell your data to anyone for any reason. <br/>
+                    We are not a bank. Think of the app as a financial advisor, recommending savings goals and helping you stay on track towards towards achieving them.
                   </p>
                 </div>
               </div>
@@ -146,11 +146,28 @@
               <div class="card-header" id="headingSix">
                 <h2 class="mb-0">
                   <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix" style="white-space: normal; text-align: left; text-decoration: none;">
-                    What if you share a joint or spouse account?
+                    How do we keep your data secure?
                   </button>
                 </h2>
               </div>
               <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
+                <div class="card-body">
+                  <p>
+                    To protect your financial security and privacy, <em>vested</em> uses the same level of security as your bank. We never have access to money in your account or confidential information such as full credit card, account or routing numbers, and we will not share or sell your data to anyone for any reason. <br/>
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header" id="headingSeven">
+                <h2 class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven" style="white-space: normal; text-align: left; text-decoration: none;">
+                    What if you share a joint or spouse account?
+                  </button>
+                </h2>
+              </div>
+              <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordionExample">
                 <div class="card-body">
                   <p>
                     Joint or spouse accounts are still your assets. So if you and your significant other have a joint account and one of you adds $500 that you were not expecting, that’s good news for your goal.
@@ -160,14 +177,14 @@
             </div>
 
             <div class="card">
-              <div class="card-header" id="headingSeven">
+              <div class="card-header" id="headingEight">
                 <h2 class="mb-0">
-                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven" style="text-decoration: none;">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight" style="text-decoration: none;">
                     More questions?
                   </button>
                 </h2>
               </div>
-              <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordionExample">
+              <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordionExample">
                 <div class="card-body">
                   <p>
                     Ask us: <a href="mailto:team@vestedapp.com?Subject=Ask%20vested%20team" target="_top" style="text-decoration: underline;"> team@vestedapp.com<a/>
