--- a/terms.html
+++ b/terms.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="shortcut icon" href="https://s3-us-west-2.amazonaws.com/vested/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Baloo+2|Montserrat:400,800,900&display=swap" rel="stylesheet">
-  <title>Terms</title>
+  <title>vested • terms</title>
 </head>
 <body>
 <div class="img-heading sticky-top">
