--- a/cases.html
+++ b/cases.html
@@ -30,7 +30,7 @@
     <link rel="shortcut icon" href="https://vested-app.s3.amazonaws.com/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Baloo+2|Montserrat:400,800,900&display=swap" rel="stylesheet">
 
-    <title>vested savings</title>
+    <title>vested • news</title>
   </head>
   <body>
     <div class="container">
