--- a/promohunt.html
+++ b/promohunt.html
@@ -54,11 +54,11 @@
         </div>
       </nav>
 
-      <div class="row center spacing-top">
+      <div class="row center spacing-top" style="max-width:60%;">
         <h1>Gimme the savings!</h1>
-        <h4 class="d-none d-md-block" style="padding-top: 0.8rem">Add your email and we will send over a promo code for a four-month free trial!</h4>
-        <h4 class="d-md-none d-lg-none d-xl-none" style="padding-top: 0.8rem">Add your email and we will send over a promo code for a 4-month free trial!</h4>
-        <div class="launchlist-widget spacing-top" data-key-id="moefeZ" data-height="210px"></div>
+        <h4 class="d-none d-md-block" style="padding-top: 0.8rem">Welcome Product Hunters&mdash;add your email and we will send over a promo code link for a four-month free trial.</h4>
+        <h4 class="d-md-none d-lg-none d-xl-none" style="padding-top: 0.8rem">Welcome Product Hunters&mdash;add your email and we will send over a promo code link for a four-month free trial.</h4>
+        <div class="launchlist-widget spacing-top" data-key-id="moefeZ" data-height="176px"></div>
         <p class="trial">The only time we'll email is to give you your free code - and to follow up after your trial for app feedback.</p>
       </div>
 
