--- a/promohunt.html
+++ b/promohunt.html
@@ -54,9 +54,9 @@
         </div>
       </nav>
 
-      <div class="row center spacing-top" style="max-width:60%;">
+      <div class="row center spacing-top">
         <h1>Gimme the savings!</h1>
-        <h4 class="d-none d-md-block" style="padding-top: 0.8rem">Welcome Product Hunters&mdash;add your email and we will send over a promo code link for a four-month free trial.</h4>
+        <h4 class="d-none d-md-block center" style="padding-top: 0.8rem; max-width:60%;">Welcome Product Hunters&mdash;add your email and we will send over a promo code link for a four-month free trial.</h4>
         <h4 class="d-md-none d-lg-none d-xl-none" style="padding-top: 0.8rem">Welcome Product Hunters&mdash;add your email and we will send over a promo code link for a four-month free trial.</h4>
         <div class="launchlist-widget spacing-top" data-key-id="moefeZ" data-height="176px"></div>
         <p class="trial">The only time we'll email is to give you your free code - and to follow up after your trial for app feedback.</p>
