--- a/promohunt.html
+++ b/promohunt.html
@@ -62,11 +62,16 @@
         <p class="trial">The only time we'll email is to give you your free code - and to follow up after your trial for app feedback.</p>
       </div>
 
+      <div class="spacing-top"></div>
       <div class="divider"></div>
 
-      <div class="row center">
-        <p class="center d-none d-md-block" style="max-width:60%; margin-top:4.5rem;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
-        <p class="center d-md-none d-lg-none d-xl-none" style="max-width:86%; font-size: 1.1rem; padding-top: 22px; text-align: left;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
+      <div class="row center" style="margin-top: 4.8rem; opacity:.8;">
+        <img src="https://vested-app.s3.amazonaws.com/miniloops.png" alt="Lamp" height="80px">
+      </div>
+
+      <div class="row center spacing-top">
+        <p class="center d-none d-md-block" style="max-width:60%;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
+        <p class="center d-md-none d-lg-none d-xl-none" style="max-width:86%; font-size: 1.1rem; padding-top: 22px;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
       </div>
     </div>
 
