--- a/media.html
+++ b/media.html
@@ -30,7 +30,7 @@
     <link rel="shortcut icon" href="https://vested-app.s3.amazonaws.com/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Baloo+2|Montserrat:400,800,900&display=swap" rel="stylesheet">
 
-    <title>vested press kit</title>
+    <title>vested • press kit</title>
   </head>
   <body>
     <div class="container">
@@ -78,7 +78,7 @@
           <p class="center d-none d-md-block" style="max-width:60%;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
           <p class="center d-md-none d-lg-none d-xl-none" style="max-width:86%; font-size: 1.1rem; padding-top: 22px; text-align: left;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
         </div>
-  
+
       </div>
 
     </div>
