--- a/cases.html
+++ b/cases.html
@@ -46,7 +46,8 @@
             </div>
             <a class="nav-item nav-link" href="https://apps.apple.com/us/app/vested-savings-goals-finance/id1509968544" target="_blank">Get the app<span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="mailto:team@vestedapp.com?subject=Hi, vested team">Contact</a>
-            <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">News</a>
+            <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">What's new</a>
+            <a class="nav-item nav-link disabled d-none d-md-block" href="#" tabindex="-1" aria-disabled="true"><img src="https://vested-app.s3.amazonaws.com/qrcode.png" alt="Lamp" height="64px"></a>
           </div>
         </div>
       </nav>
