update meta tags

--- a/producthunt.html
+++ b/producthunt.html
@@ -13,8 +13,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Simple savings goals">
-    <meta name="keywords" content="financial savings, wellness, investment, save money, savings goal, savings plan, mint, copilot">
+    <meta name="description" content="A fitness tracker, for saving money">
+    <meta name="keywords" content="financial savings, wellness, investment, save money, savings goal, savings plan, mint, copilot, personal capitol, finance">
     <meta name="apple-itunes-app" content="app-id=1509968544, affiliate-data=myAffiliateData, app-argument=myURL">
 
     <!-- Email waitlist capture -->
