update meta tags

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <meta name="apple-itunes-app" content="app-id=1509968544, affiliate-data=myAffiliateData, app-argument=myURL">
 
     <!-- Open graph card data: linkedin etc. -->
-    <meta property="og:url" content="https://vestedapp.com/" />
-    <meta property="og:title" content="Simple savings goals" />
-    <meta property="og:description" content="Set and reach your financial goals" />
-    <meta property="og:image" content="https://vested-app.s3.amazonaws.com/hero.png" />
+    <meta property="og:url" content="https://vestedapp.com/">
+    <meta property="og:title" content="vested - savings goals">
+    <meta property="og:description" content="A fitness tracker, for saving money">
+    <meta property="og:image" content="https://vested-app.s3.amazonaws.com/hero.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -30,7 +30,7 @@
     <link rel="shortcut icon" href="https://vested-app.s3.amazonaws.com/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Baloo+2|Montserrat:400,800,900&display=swap" rel="stylesheet">
 
-    <title>vested savings</title>
+    <title>vested</title>
   </head>
   <body>
     <div class="container">
