--- a/faq.html
+++ b/faq.html
@@ -75,7 +75,7 @@
               </div>
             </div>
 
-            <div class="card">
+            <!-- <div class="card">
               <div class="card-header" id="headingTwo">
                 <h2 class="mb-0">
                   <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseOne" style="text-decoration: none;">
@@ -90,7 +90,7 @@
                   </p>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <div class="card">
               <div class="card-header" id="headingThree">
