--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h4 class="d-none d-md-block" style="padding-top: 0.8rem">Simple savings goals to get you where you need to be.</h4>
         <h4 class="d-md-none d-lg-none d-xl-none" style="padding-top: 0.8rem">Simple savings goals to get you where you need to be.</h4>
         <a href="https://apps.apple.com/us/app/vested-savings-goals-finance/id1509968544" target="_blank"><img class="BigButton" style="margin-top: 1.4rem" src="https://vested-app.s3.amazonaws.com/badge-bk.png" alt="Lamp" height="54"></a>
-        <p class="trial">FREE TWO MONTH TRIAL</p>
+        <!-- <p class="trial">FREE TWO MONTH TRIAL</p> -->
       </div>
       <div class="row d-none d-md-block center spacing-top">
         <img class="hero" src="https://vested-app.s3.amazonaws.com/hero.png" alt="Lamp" height="350px">
